JoinSharedCartCommand added
