# API/Controllers/SharedCartsController.cs
@@ -29,5 +29,11 @@ namespace API.Controllers
         {
             return await mediator.Send(new GetSharedCartsRequest(), cancellationToken);
         }
+
+        [HttpPost("join")]
+        public async Task<JoinSharedCartResponse> JoinSharedCart(JoinSharedCartCommand command, CancellationToken cancellationToken)
+        {
+            return await mediator.Send(command, cancellationToken);
+        }
     }
 }
