# API/swagger.json
@@ -553,6 +553,55 @@
           }
         }
       }
+    },
+    "/api/SharedCarts/join": {
+      "post": {
+        "tags": [
+          "SharedCarts"
+        ],
+        "operationId": "JoinSharedCart",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/JoinSharedCartCommand"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/JoinSharedCartCommand"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/JoinSharedCartCommand"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/JoinSharedCartResponse"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/JoinSharedCartResponse"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/JoinSharedCartResponse"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -802,6 +851,30 @@
             "items": {
               "$ref": "#/components/schemas/TopCategory"
             },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "JoinSharedCartCommand": {
+        "type": "object",
+        "properties": {
+          "passcode": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "JoinSharedCartResponse": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "name": {
+            "type": "string",
             "nullable": true
           }
         },
